fixed the white spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,12 +41,14 @@ hr {
   display: block;
   border-top: 1px solid #aaaaaa;
   border-bottom: 1px solid #ffffff;
+  margin-top: 0;
 }
 
 .button-style {
   font-family: 'Open Sans', sans-serif;
   color: #5e5e5e;
   font-weight: 300;
+  vertical-align: top;
 }
 
 .text-muted {
@@ -59,12 +61,13 @@ hr {
 
 .title-super {
   font-size: 60px;
+  margin-top: 1rem;
 }
 
 .title-logo {
   max-width: 100px;
   max-height: 100px;
-  margin: 20px;
+  margin: 30px;
   border-radius: 50%;
 }
 
